--- a/cowsay/Dockerfile
+++ b/cowsay/Dockerfile
@@ -1,6 +1,8 @@
-#FROM nginx:latest
-FROM php:5.6-apache
+FROM php:apache
 
 RUN apt-get -qq update && apt-get -qq install cowsay fortunes
 
 COPY index.php /var/www/html/
+
+EXPOSE 80
+CMD ["apache2-foreground"]
